[package]
name = "ec-points"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-algebra-intro = "0.3.0"
ark-ff = "0.3.0"
ark-ec = "0.3.0"
ark-bls12-377 = "0.3.0"
ark-bls12-381 = "0.3.0"
ark-std = { version = "^0.3.0", default-features = false }
